# Salamander

./: CMakeLists.txt  README.md  character_controller.txt  compile_commands.json  imgui.ini  sample_scene.json
.cache/clangd/index/: aabb2d.h.3C56A936BB6AEFF8.idx  affine-mat.h.40FEDBABFB0A0DB4.idx  affine-post.h.20DFD27F4A378B7F.idx  affine-pre.h.96DA024D7CDDE169.idx  affine.h.56165B70D6999D6E.idx  affine.h.9EF8FCA1958F39A0.idx  affine2d-post.h.42EDEA0F1BD5B8B9.idx  affine2d.h.7780A97F88839707.idx  bezier.h.C2E433CC1F3CD2DE.idx  box.h.C508BABCB09FC6CC.idx  cam.h.CD3C1CC812A4058F.idx  camera.h.20B7504A9D96D900.idx  cglm.h.7F09C30CDC66FCE6.idx  cimgui.h.401F3BFC87FF20DB.idx  cimgui_impl.h.569EC6FFBBE4FD7F.idx  color.h.2D1870835CE447CB.idx  common.h.D27F5EFCBA52F1A8.idx  components.h.E514F1D6A2549C25.idx  curve.h.A3443C33D5CD815B.idx  ease.h.B3052802FE45D576.idx  ecs.hpp.61D54824CDEAF4E5.idx  ecs_api.cpp.4EE5AB6327CCC169.idx  ecs_api.h.8C0E24B1AAE754D7.idx  euler.h.E71C07A260FB499C.idx  euler_to_quat_rh.h.AF577B33F2D809A0.idx  frustum.h.E500B3F918CD21AE.idx  glad.h.4B72C6E0D781B96D.idx  glfw3.h.909D85ED2ED73FE2.idx  glm.h.A3A26B36BD1A67F2.idx  intrin.h.637EDA689A2519F1.idx  io.h.789B6F83CEB22B08.idx  ivec2.h.BE4139F2FFAE747A.idx  ivec3.h.44AE8B9D7AFBDB91.idx  ivec4.h.EE4E5A6FDB141702.idx  json_api.h.F0A5ADF6C285B9C1.idx  khrplatform.h.C8E5D5FCA5627E90.idx  main.c.7B8D819086D2781D.idx  mat2.h.131FE2B3255E8AA1.idx  mat2.h.388508060ECBBFDD.idx  mat2x3.h.E096FD7901B45EF4.idx  (+37 more)
include/box2d/: box2d.h
include/cimgui/imgui/backends/: imgui_impl_glfw.h
include/game/: player.h
include/glad/: glad.h
include/jolt/Core/: Semaphore.cpp
include/salamander/: audio.h  camera.h  component_registers.h  components.h  config.h  ecs.hpp  ecs_api.h  editor.h  glm.h  imgui_layer.h  input.h  json_api.h  light_3d.h  model.h  physics_2d.h  physics_3d.h  registry.h  renderer.h  salamander.h  shader.h  state.h  systems.h  timer.h  ui_image.h  ui_text.h  umap.h  utils.h  vector.h  window.h
lib/: bimgRelease.lib  bimg_decodeRelease.lib  box2d.lib  bxRelease.lib  cimgui.lib  joltc_double.lib  sndfile.lib
res/models/: box.dae  leaf.blend  leaf.blend1  leaf.mtl  map.blend  map.blend1  map.mtl  map_collider.mtl  scene.gltf
shaders/: fragment_2d.glsl  fragment_3d.glsl  fragment_line_3d.glsl  fs_3d.glsl  vertex_line_2d.glsl  vertex_line_3d.glsl  vs_2d.glsl  vs_2d.sc  vs_3d.glsl  vs_image.glsl  vs_shadow_3d.glsl
src/: audio.c  camera.c  component_registers.c  ecs_api.cpp  editor.c  glad.c  imgui_layer.c  imgui_layer.cpp  input.c  json_api.cpp  light_3d.c  main.c  model.c  physics_2d.c  physics_3d.c  registry.c  renderer.c  shader.c  state.c  systems.c  timer.c  ui.c  ui_image.c  ui_text.c  umap.c  utils.c  vector.c  window.c
src/game/: player.c
